<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/files_category_title">

        <CheckBoxPreference
            app:key="@string/pref_open_mode"
            app:title="@string/open_mode_title"
            app:summary="@string/open_mode_summary"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/text_category_title">

        <EditTextPreference
            app:key="@string/pref_text_size"
            app:title="@string/text_size_title"
            app:summary="@string/text_size_summary"
            app:defaultValue="@string/text_size_def_value"
            app:dialogTitle="@string/text_size_dialog_title"/>

        <ListPreference
            app:key="@string/pref_text_style"
            app:title="@string/text_style_title"
            app:summary="@string/text_style_summary"
            app:defaultValue="normal"
            app:entries="@array/text_style_entries"
            app:entryValues="@array/text_style_values"
            app:dialogTitle="@string/text_style_dialog_title"/>

        <Preference
            app:title="@string/text_color_title"
            app:summary="@string/text_color_summary"
            app:fragment="ru.ridkeim.settingsexample.preffragments.ColorSettingsFragment"/>

    </PreferenceCategory>

</PreferenceScreen>